--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "slash": "^1.0.0",
     "bluebird": "^3.5.0",
     "unist-util-select": "^1.5.0",
-    "gatsby-plugin-ffmpeg": "^0.2.0"
+    "gatsby-plugin-ffmpeg": "git@github.com:Mike-Dax/gatsby-plugin-ffmpeg.git"
   },
   "devDependencies": {
     "@babel/cli": "7.0.0-beta.51",
